[project]
name = "echidna-mcp"
version = "0.1.0"
description = "MCP server for Echidna smart contract fuzzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "model-context-protocol",
    "etheno"
]

[project.scripts]
echidna-mcp = "echidna_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
